src/test/ui/feature-gates/unknown-feature.stderr
error[E0635]: unknown feature `unknown_dust_feature`
  --> $DIR/unknown-feature.rs:1:12
   |
LL | #![feature(unknown_dust_feature)]
   |            ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `dustc --explain E0635`.
