src/test/ui/feature-gates/unknown-feature.ds
#![feature(unknown_dust_feature)] //~ ERROR unknown feature

fn main() {}
